--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <!--Category button -->
              <div class="flex justify-between space-x-20 lg:space-x-52 pb-16 pt-5">
                 <button onclick="catPets()" class="btn btn-active text-lg font-bold"><i class="size-9"><img src="/B10A6-Assess-Your-Asynchronous-JS-and-ES6-skills-main/images/cat.png"></i> Cat</button>
-                <button class="btn btn-active text-lg font-bold"><i class="size-10"><img src="/B10A6-Assess-Your-Asynchronous-JS-and-ES6-skills-main/images/australian-shepherd.png"></i> Dog</button>
-                <button class="btn btn-active text-lg font-bold"><i class="size-9"><img src="https://cdn-icons-png.flaticon.com/512/10806/10806489.png"></i> Rabbit</button>
-                <button onclick="birdPets" class="btn btn-active text-lg font-bold"><i class="size-8"><img src="/B10A6-Assess-Your-Asynchronous-JS-and-ES6-skills-main/images/bird.png"></i> Bird</button>
+                <button onclick="dogPets()" class="btn btn-active text-lg font-bold"><i class="size-10"><img src="/B10A6-Assess-Your-Asynchronous-JS-and-ES6-skills-main/images/australian-shepherd.png"></i> Dog</button>
+                <button onclick="rabbitPets()" class="btn btn-active text-lg font-bold"><i class="size-9"><img src="https://cdn-icons-png.flaticon.com/512/10806/10806489.png"></i> Rabbit</button>
+                <button onclick="birdPets()" class="btn btn-active text-lg font-bold"><i class="size-8"><img src="/B10A6-Assess-Your-Asynchronous-JS-and-ES6-skills-main/images/bird.png"></i> Bird</button>
              </div>
 
             <!-- Spinner -->
